frontend/test/should_fail/from_storage_004a.grg
using from_storage;

rule r(ref m:map<EE,EE>)
{
	x:Node -e:EE-> y:Node -f:E{m[e]}-> y;
	
	modify {
	}
}
